tests/invalid/ann_assign_empty_list_wrong_type/main.py
def run_case() -> None:
    x: int = []

if __name__ == "__main__":
    run_case()
